src/parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls idecl
   4        | decls vdecl
   5        | decls fdecl
   6        | decls sdecl

   7  idecl_list :
   8             | idecl_list idecl

   9  idecl : POUND INCLUDE SLIT SEMI

  10  vdecl : typ ID SEMI
  11        | typ ID ASSIGN expr SEMI

  12  vdecl_list :
  13             | vdecl_list vdecl

  14  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  15  sdecl : STRUCT STLIT LBRACE vdecl_list RBRACE SEMI

  16  formals_opt :
  17              | formal_list

  18  formal_list : typ ID
  19              | formal_list COMMA typ ID

  20  typ : INT
  21      | BOOL
  22      | FLOAT
  23      | VOID
  24      | STR
  25      | PITCH
  26      | STLIT
  27      | typ LSQUARE LITERAL RSQUARE
  28      | typ LSQUARE RSQUARE

  29  stmt_list :
  30            | stmt_list stmt

  31  stmt : expr SEMI
  32       | RETURN expr_opt SEMI
  33       | LBRACE stmt_list RBRACE
  34       | IF LPAREN expr RPAREN stmt
  35       | IF LPAREN expr RPAREN stmt ELSE stmt
  36       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  37       | WHILE LPAREN expr RPAREN stmt

  38  expr_opt :
  39           | expr

  40  expr : LITERAL
  41       | FLIT
  42       | BLIT
  43       | SLIT
  44       | PLIT
  45       | ID
  46       | expr PLUS expr
  47       | expr MINUS expr
  48       | expr TIMES expr
  49       | expr DIVIDE expr
  50       | expr CONCAT expr
  51       | expr MOD expr
  52       | expr EQ expr
  53       | expr NEQ expr
  54       | expr LT expr
  55       | expr LEQ expr
  56       | expr GT expr
  57       | expr GEQ expr
  58       | expr AND expr
  59       | expr OR expr
  60       | expr DOT ID
  61       | expr LSQUARE expr RSQUARE
  62       | MINUS expr
  63       | NOT expr
  64       | expr ASSIGN expr
  65       | ID LPAREN args_opt RPAREN
  66       | LPAREN expr RPAREN
  67       | LSQUARE args_opt RSQUARE

  68  args_opt :
  69           | args_list

  70  args_list : expr
  71            | args_list COMMA expr

  72  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (72)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (72)

	.  reduce 72


state 4
	program : decls . EOF  (1)
	decls : decls . idecl  (3)
	decls : decls . vdecl  (4)
	decls : decls . fdecl  (5)
	decls : decls . sdecl  (6)

	POUND  shift 5
	INT  shift 6
	BOOL  shift 7
	FLOAT  shift 8
	VOID  shift 9
	STR  shift 10
	PITCH  shift 11
	STRUCT  shift 12
	STLIT  shift 13
	EOF  shift 14
	.  error

	idecl  goto 15
	vdecl  goto 16
	fdecl  goto 17
	sdecl  goto 18
	typ  goto 19


state 5
	idecl : POUND . INCLUDE SLIT SEMI  (9)

	INCLUDE  shift 20
	.  error


state 6
	typ : INT .  (20)

	.  reduce 20


state 7
	typ : BOOL .  (21)

	.  reduce 21


state 8
	typ : FLOAT .  (22)

	.  reduce 22


state 9
	typ : VOID .  (23)

	.  reduce 23


state 10
	typ : STR .  (24)

	.  reduce 24


state 11
	typ : PITCH .  (25)

	.  reduce 25


state 12
	sdecl : STRUCT . STLIT LBRACE vdecl_list RBRACE SEMI  (15)

	STLIT  shift 21
	.  error


state 13
	typ : STLIT .  (26)

	.  reduce 26


state 14
	program : decls EOF .  (1)

	.  reduce 1


state 15
	decls : decls idecl .  (3)

	.  reduce 3


state 16
	decls : decls vdecl .  (4)

	.  reduce 4


state 17
	decls : decls fdecl .  (5)

	.  reduce 5


state 18
	decls : decls sdecl .  (6)

	.  reduce 6


state 19
	vdecl : typ . ID SEMI  (10)
	vdecl : typ . ID ASSIGN expr SEMI  (11)
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (14)
	typ : typ . LSQUARE LITERAL RSQUARE  (27)
	typ : typ . LSQUARE RSQUARE  (28)

	LSQUARE  shift 22
	ID  shift 23
	.  error


state 20
	idecl : POUND INCLUDE . SLIT SEMI  (9)

	SLIT  shift 24
	.  error


state 21
	sdecl : STRUCT STLIT . LBRACE vdecl_list RBRACE SEMI  (15)

	LBRACE  shift 25
	.  error


state 22
	typ : typ LSQUARE . LITERAL RSQUARE  (27)
	typ : typ LSQUARE . RSQUARE  (28)

	RSQUARE  shift 26
	LITERAL  shift 27
	.  error


state 23
	vdecl : typ ID . SEMI  (10)
	vdecl : typ ID . ASSIGN expr SEMI  (11)
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (14)

	SEMI  shift 28
	LPAREN  shift 29
	ASSIGN  shift 30
	.  error


state 24
	idecl : POUND INCLUDE SLIT . SEMI  (9)

	SEMI  shift 31
	.  error


state 25
	sdecl : STRUCT STLIT LBRACE . vdecl_list RBRACE SEMI  (15)
	vdecl_list : .  (12)

	.  reduce 12

	vdecl_list  goto 32


state 26
	typ : typ LSQUARE RSQUARE .  (28)

	.  reduce 28


state 27
	typ : typ LSQUARE LITERAL . RSQUARE  (27)

	RSQUARE  shift 33
	.  error


state 28
	vdecl : typ ID SEMI .  (10)

	.  reduce 10


state 29
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (14)
	formals_opt : .  (16)

	INT  shift 6
	BOOL  shift 7
	FLOAT  shift 8
	VOID  shift 9
	STR  shift 10
	PITCH  shift 11
	STLIT  shift 13
	RPAREN  reduce 16

	typ  goto 34
	formals_opt  goto 35
	formal_list  goto 36


state 30
	vdecl : typ ID ASSIGN . expr SEMI  (11)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 47


state 31
	idecl : POUND INCLUDE SLIT SEMI .  (9)

	.  reduce 9


state 32
	vdecl_list : vdecl_list . vdecl  (13)
	sdecl : STRUCT STLIT LBRACE vdecl_list . RBRACE SEMI  (15)

	RBRACE  shift 48
	INT  shift 6
	BOOL  shift 7
	FLOAT  shift 8
	VOID  shift 9
	STR  shift 10
	PITCH  shift 11
	STLIT  shift 13
	.  error

	vdecl  goto 49
	typ  goto 50


state 33
	typ : typ LSQUARE LITERAL RSQUARE .  (27)

	.  reduce 27


state 34
	formal_list : typ . ID  (18)
	typ : typ . LSQUARE LITERAL RSQUARE  (27)
	typ : typ . LSQUARE RSQUARE  (28)

	LSQUARE  shift 22
	ID  shift 51
	.  error


state 35
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (14)

	RPAREN  shift 52
	.  error


state 36
	formals_opt : formal_list .  (17)
	formal_list : formal_list . COMMA typ ID  (19)

	COMMA  shift 53
	RPAREN  reduce 17


state 37
	expr : LSQUARE . args_opt RSQUARE  (67)
	args_opt : .  (68)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	RSQUARE  reduce 68

	expr  goto 54
	args_opt  goto 55
	args_list  goto 56


state 38
	expr : LPAREN . expr RPAREN  (66)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 57


state 39
	expr : MINUS . expr  (62)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 58


state 40
	expr : NOT . expr  (63)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 59


state 41
	expr : LITERAL .  (40)

	.  reduce 40


state 42
	expr : BLIT .  (42)

	.  reduce 42


state 43
	expr : ID .  (45)
	expr : ID . LPAREN args_opt RPAREN  (65)

	LPAREN  shift 60
	LSQUARE  reduce 45
	RSQUARE  reduce 45
	SEMI  reduce 45
	RPAREN  reduce 45
	COMMA  reduce 45
	PLUS  reduce 45
	MINUS  reduce 45
	TIMES  reduce 45
	DIVIDE  reduce 45
	CONCAT  reduce 45
	MOD  reduce 45
	ASSIGN  reduce 45
	EQ  reduce 45
	NEQ  reduce 45
	LT  reduce 45
	LEQ  reduce 45
	GT  reduce 45
	GEQ  reduce 45
	AND  reduce 45
	OR  reduce 45
	DOT  reduce 45


state 44
	expr : FLIT .  (41)

	.  reduce 41


state 45
	expr : SLIT .  (43)

	.  reduce 43


state 46
	expr : PLIT .  (44)

	.  reduce 44


state 47
	vdecl : typ ID ASSIGN expr . SEMI  (11)
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	SEMI  shift 62
	PLUS  shift 63
	MINUS  shift 64
	TIMES  shift 65
	DIVIDE  shift 66
	CONCAT  shift 67
	MOD  shift 68
	ASSIGN  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DOT  shift 78
	.  error


state 48
	sdecl : STRUCT STLIT LBRACE vdecl_list RBRACE . SEMI  (15)

	SEMI  shift 79
	.  error


state 49
	vdecl_list : vdecl_list vdecl .  (13)

	.  reduce 13


state 50
	vdecl : typ . ID SEMI  (10)
	vdecl : typ . ID ASSIGN expr SEMI  (11)
	typ : typ . LSQUARE LITERAL RSQUARE  (27)
	typ : typ . LSQUARE RSQUARE  (28)

	LSQUARE  shift 22
	ID  shift 80
	.  error


state 51
	formal_list : typ ID .  (18)

	.  reduce 18


state 52
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (14)

	LBRACE  shift 81
	.  error


state 53
	formal_list : formal_list COMMA . typ ID  (19)

	INT  shift 6
	BOOL  shift 7
	FLOAT  shift 8
	VOID  shift 9
	STR  shift 10
	PITCH  shift 11
	STLIT  shift 13
	.  error

	typ  goto 82


state 54
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)
	args_list : expr .  (70)

	LSQUARE  shift 61
	PLUS  shift 63
	MINUS  shift 64
	TIMES  shift 65
	DIVIDE  shift 66
	CONCAT  shift 67
	MOD  shift 68
	ASSIGN  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DOT  shift 78
	RSQUARE  reduce 70
	RPAREN  reduce 70
	COMMA  reduce 70


state 55
	expr : LSQUARE args_opt . RSQUARE  (67)

	RSQUARE  shift 83
	.  error


state 56
	args_opt : args_list .  (69)
	args_list : args_list . COMMA expr  (71)

	COMMA  shift 84
	RSQUARE  reduce 69
	RPAREN  reduce 69


state 57
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)
	expr : LPAREN expr . RPAREN  (66)

	LSQUARE  shift 61
	RPAREN  shift 85
	PLUS  shift 63
	MINUS  shift 64
	TIMES  shift 65
	DIVIDE  shift 66
	CONCAT  shift 67
	MOD  shift 68
	ASSIGN  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DOT  shift 78
	.  error


state 58
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : MINUS expr .  (62)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	DOT  shift 78
	RSQUARE  reduce 62
	SEMI  reduce 62
	RPAREN  reduce 62
	COMMA  reduce 62
	PLUS  reduce 62
	MINUS  reduce 62
	TIMES  reduce 62
	DIVIDE  reduce 62
	CONCAT  reduce 62
	MOD  reduce 62
	ASSIGN  reduce 62
	EQ  reduce 62
	NEQ  reduce 62
	LT  reduce 62
	LEQ  reduce 62
	GT  reduce 62
	GEQ  reduce 62
	AND  reduce 62
	OR  reduce 62


state 59
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : NOT expr .  (63)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	DOT  shift 78
	RSQUARE  reduce 63
	SEMI  reduce 63
	RPAREN  reduce 63
	COMMA  reduce 63
	PLUS  reduce 63
	MINUS  reduce 63
	TIMES  reduce 63
	DIVIDE  reduce 63
	CONCAT  reduce 63
	MOD  reduce 63
	ASSIGN  reduce 63
	EQ  reduce 63
	NEQ  reduce 63
	LT  reduce 63
	LEQ  reduce 63
	GT  reduce 63
	GEQ  reduce 63
	AND  reduce 63
	OR  reduce 63


state 60
	expr : ID LPAREN . args_opt RPAREN  (65)
	args_opt : .  (68)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	RPAREN  reduce 68

	expr  goto 54
	args_opt  goto 86
	args_list  goto 56


state 61
	expr : expr LSQUARE . expr RSQUARE  (61)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 87


state 62
	vdecl : typ ID ASSIGN expr SEMI .  (11)

	.  reduce 11


state 63
	expr : expr PLUS . expr  (46)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 88


state 64
	expr : expr MINUS . expr  (47)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 89


state 65
	expr : expr TIMES . expr  (48)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 90


state 66
	expr : expr DIVIDE . expr  (49)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 91


state 67
	expr : expr CONCAT . expr  (50)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 92


state 68
	expr : expr MOD . expr  (51)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 93


state 69
	expr : expr ASSIGN . expr  (64)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 94


state 70
	expr : expr EQ . expr  (52)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 95


state 71
	expr : expr NEQ . expr  (53)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 96


state 72
	expr : expr LT . expr  (54)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 97


state 73
	expr : expr LEQ . expr  (55)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 98


state 74
	expr : expr GT . expr  (56)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 99


state 75
	expr : expr GEQ . expr  (57)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 100


state 76
	expr : expr AND . expr  (58)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 101


state 77
	expr : expr OR . expr  (59)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 102


state 78
	expr : expr DOT . ID  (60)

	ID  shift 103
	.  error


state 79
	sdecl : STRUCT STLIT LBRACE vdecl_list RBRACE SEMI .  (15)

	.  reduce 15


state 80
	vdecl : typ ID . SEMI  (10)
	vdecl : typ ID . ASSIGN expr SEMI  (11)

	SEMI  shift 28
	ASSIGN  shift 30
	.  error


state 81
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (14)
	vdecl_list : .  (12)

	.  reduce 12

	vdecl_list  goto 104


state 82
	formal_list : formal_list COMMA typ . ID  (19)
	typ : typ . LSQUARE LITERAL RSQUARE  (27)
	typ : typ . LSQUARE RSQUARE  (28)

	LSQUARE  shift 22
	ID  shift 105
	.  error


state 83
	expr : LSQUARE args_opt RSQUARE .  (67)

	.  reduce 67


state 84
	args_list : args_list COMMA . expr  (71)

	LSQUARE  shift 37
	LPAREN  shift 38
	MINUS  shift 39
	NOT  shift 40
	LITERAL  shift 41
	BLIT  shift 42
	ID  shift 43
	FLIT  shift 44
	SLIT  shift 45
	PLIT  shift 46
	.  error

	expr  goto 106


state 85
	expr : LPAREN expr RPAREN .  (66)

	.  reduce 66


state 86
	expr : ID LPAREN args_opt . RPAREN  (65)

	RPAREN  shift 107
	.  error


state 87
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr LSQUARE expr . RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	RSQUARE  shift 108
	PLUS  shift 63
	MINUS  shift 64
	TIMES  shift 65
	DIVIDE  shift 66
	CONCAT  shift 67
	MOD  shift 68
	ASSIGN  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DOT  shift 78
	.  error


state 88
	expr : expr . PLUS expr  (46)
	expr : expr PLUS expr .  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	TIMES  shift 65
	DIVIDE  shift 66
	CONCAT  shift 67
	MOD  shift 68
	DOT  shift 78
	RSQUARE  reduce 46
	SEMI  reduce 46
	RPAREN  reduce 46
	COMMA  reduce 46
	PLUS  reduce 46
	MINUS  reduce 46
	ASSIGN  reduce 46
	EQ  reduce 46
	NEQ  reduce 46
	LT  reduce 46
	LEQ  reduce 46
	GT  reduce 46
	GEQ  reduce 46
	AND  reduce 46
	OR  reduce 46


state 89
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr MINUS expr .  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	TIMES  shift 65
	DIVIDE  shift 66
	CONCAT  shift 67
	MOD  shift 68
	DOT  shift 78
	RSQUARE  reduce 47
	SEMI  reduce 47
	RPAREN  reduce 47
	COMMA  reduce 47
	PLUS  reduce 47
	MINUS  reduce 47
	ASSIGN  reduce 47
	EQ  reduce 47
	NEQ  reduce 47
	LT  reduce 47
	LEQ  reduce 47
	GT  reduce 47
	GEQ  reduce 47
	AND  reduce 47
	OR  reduce 47


state 90
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr TIMES expr .  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	CONCAT  shift 67
	DOT  shift 78
	RSQUARE  reduce 48
	SEMI  reduce 48
	RPAREN  reduce 48
	COMMA  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIVIDE  reduce 48
	MOD  reduce 48
	ASSIGN  reduce 48
	EQ  reduce 48
	NEQ  reduce 48
	LT  reduce 48
	LEQ  reduce 48
	GT  reduce 48
	GEQ  reduce 48
	AND  reduce 48
	OR  reduce 48


state 91
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr DIVIDE expr .  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)

	LSQUARE  shift 61
	CONCAT  shift 67
	DOT  shift 78
	RSQUARE  reduce 49
	SEMI  reduce 49
	RPAREN  reduce 49
	COMMA  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	TIMES  reduce 49
	DIVIDE  reduce 49
	MOD  reduce 49
	ASSIGN  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LT  reduce 49
	LEQ  reduce 49
	GT  reduce 49
	GEQ  reduce 49
	AND  reduce 49
	OR  reduce 49


state 92
	expr : expr . PLUS expr  (46)
	expr : expr . MINUS expr  (47)
	expr : expr . TIMES expr  (48)
	expr : expr . DIVIDE expr  (49)
	expr : expr . CONCAT expr  (50)
	expr : expr CONCAT expr .  (50)
	expr : expr . MOD expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . NEQ expr  (53)
	expr : expr . LT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . GEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . DOT ID  (60)
	expr : expr . LSQUARE expr RSQUARE  (61)
	expr : expr . ASSIGN expr  (64)
